--- a/app/views/addresses/list.scala.html
+++ b/app/views/addresses/list.scala.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+@(addresses: List[Address])(implicit lang: Lang)
 
-</body>
-</html>
+@import play.api.Play.current
+@import play.api.i18n.Messages.Implicits._
+
+@main(Messages("application.name")) {
+
+    <dl class="addresses">
+        @for(address <- addresses) {
+            <dt>@address.houseNumber</dt>
+            <dt>@address.firstLine</dt>
+            <dt>@address.town</dt>
+            <dt>@address.postcode</dt>
+        }
+    </dl>
+}
