--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,29 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit lang: Lang)
+
+@import play.api.Play.current
+@import play.api.i18n.Messages.Implicits._
 
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <title>@title</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-    <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+    <head>
+        <title>@title</title>
+        <link rel="stylesheet" type="text/css" media="screen" href='@routes.Assets.at("stylesheets/bootstrap.css")'>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
-        @content
+        <div class="screenshot">
+
+            <div class="navbar navbar-fixed-top">
+                <div class="navbar-inner">
+                    <a class="brand" href="@routes.Application.index()">
+                        @Messages("application.name")
+                    </a>
+                </div>
+            </div>
+            <div class="container">
+                @content
+            </div>
+        </div>
     </body>
 </html>
