The barcode functionality of the tutorial has now been implemented

--- a/app/views/addresses/list.scala.html
+++ b/app/views/addresses/list.scala.html
@@ -8,9 +8,9 @@
     <dl class="addresses">
         @for(address <- addresses) {
             <dt>@address.houseNumber</dt>
-            <dt>@address.firstLine</dt>
-            <dt>@address.town</dt>
-            <dt>@address.postcode</dt>
+            <dd>@address.firstLine</dd>
+            <dd>@address.town</dd>
+            <dd>@address.postcode</dd>
         }
     </dl>
 }
