--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,7 +1,11 @@
-@(title: String)(content: Html)(implicit lang: Lang)
+@(title: String)(content: Html)(implicit flash: Flash, lang: Lang)
 
 @import play.api.Play.current
+@import play.api.data.Form
+@import play.api.data.Forms.{mapping, longNumber, nonEmptyText}
 @import play.api.i18n.Messages.Implicits._
+@import play.api.Play.current
+@import play.api.mvc.Flash
 
 <!DOCTYPE html>
 
@@ -9,19 +13,48 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" type="text/css" media="screen" href='@routes.Assets.at("stylesheets/bootstrap.css")'>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/main.css")'>
     </head>
     <body>
         <div class="screenshot">
-
             <div class="navbar navbar-fixed-top">
                 <div class="navbar-inner">
-                    <a class="brand" href="@routes.Application.index()">
-                        @Messages("application.name")
-                    </a>
+                    <div class="container">
+                        <a class="brand" href="@routes.Application.index()">
+                            @Messages("application.name")
+                        </a>
+                        <ul class="nav">
+                            <li class="divider-vertical"></li>
+                            <li class="active">
+                                <a href="@routes.Products.list()">
+                                    @Messages("products.list.navigation")
+                                </a>
+                            </li>
+                            <li class="active">
+                                <a href="@routes.Products.newProduct()">
+                                    <i class="icon-plus icon-white"></i>
+                                    @Messages("products.new.command")
+                                </a>
+                            </li>
+                            <li class="divider-vertical"></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+
             <div class="container">
+                @if(flash.get("success").isDefined){
+                    <div class="alert alert-success">
+                        @flash.get("success")
+                    </div>
+                }
+
+                @if(flash.get("error").isDefined){
+                    <div class="alert alert-error">
+                        @flash.get("error")
+                    </div>
+                }
+
                 @content
                 @debug()
             </div>
