--- a/app/views/products/list.scala.html
+++ b/app/views/products/list.scala.html
@@ -1,17 +1,26 @@
-@(products: List[Product])(implicit lang: Lang)
+@(products: List[Product])(implicit flash: Flash, lang: Lang)
 
 @import play.api.Play.current
 @import play.api.i18n.Messages.Implicits._
+@import play.api.mvc.Flash
 
 @main(Messages("application.name")) {
 
 <dl class="products">
     @for(product <- products) {
-    <dt>@product.ean</dt>
-    <dd>@product.productID</dd>
-    <dd>@product.productDesc</dd>
-    <dd>@product.productPrice</dd>
-    <dd>@product.productType</dd>
+    <dt>
+        <a href="@controllers.routes.Products.show(product.ean)">
+            @product.productName
+        </a>
+    </dt>
+    <dd>product.productDesc</dd>
     }
 </dl>
+
+<p>
+    <a href="@controllers.routes.Products.newProduct()"
+       class="btn">
+        <i class="icon-plus"></i> @Messages("products.new.command")
+    </a>
+</p>
 }
